--- a/sass/main.css
+++ b/sass/main.css
@@ -56,23 +56,29 @@ table {
 body {
   background-color: #EEEEEE;
   text-align: center;
+  font-family: 'Noto Sans TC', sans-serif;
+}
+
+.parallax-slider {
+  left: 0;
+}
+
+.section {
+  background-color: #EEEEEE;
 }
 
 .select {
   position: relative;
-  height: 380px;
-  background-image: url(../assets/main-image.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  height: 400px;
 }
 
 .select .select-title {
   position: relative;
   top: 89px;
   font-size: 40px;
+  font-weight: 700;
   color: #FFFFFF;
-  letter-spacing: 3.89px;
+  letter-spacing: 5px;
 }
 
 .select .select-ad {
@@ -90,6 +96,7 @@ body {
 
 .hot-ad {
   position: relative;
+  display: inline-block;
   margin: -28px auto 0px auto;
   min-height: 112px;
   max-width: 800px;
@@ -97,7 +104,7 @@ body {
   padding-left: 26px;
   background: #FFFFFF;
   -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
@@ -118,6 +125,7 @@ body {
   float: left;
   margin: 15px 13px;
   line-height: 42px;
+  border: none;
   border-radius: 5px;
   font-size: 20px;
   color: #FFFFFF;
@@ -150,6 +158,7 @@ body {
 .sub-title {
   margin: 65px auto 0px auto;
   font-size: 36px;
+  font-weight: 700;
   color: #8A82CC;
   letter-spacing: 3.89px;
 }
@@ -192,25 +201,35 @@ body {
 
 .area-list .card .area-location .area-location-img {
   height: 155px;
+  position: relative;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-.area-list .card .area-location .area-location-img h3, .area-list .card .area-location .area-location-img p {
-  margin-top: 117px;
-  display: inline-block;
-  color: #fff;
+.area-list .card .area-location .area-location-img .area-name {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 10px 0;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
-.area-list .card .area-location .area-location-img h3 {
+.area-list .card .area-location .area-location-img .area-name h3, .area-list .card .area-location .area-location-img .area-name p {
+  color: #fff;
+  text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.7);
+}
+
+.area-list .card .area-location .area-location-img .area-name h3 {
   font-size: 24px;
   float: left;
   margin-left: 22px;
 }
 
-.area-list .card .area-location .area-location-img p {
+.area-list .card .area-location .area-location-img .area-name p {
   font-size: 16px;
+  padding-top: 3px;
   float: right;
   margin-right: 22px;
 }
@@ -218,14 +237,19 @@ body {
 .area-list .card .area-location .area-location-info {
   padding: 20px 23px;
   text-align: left;
+  font-weight: 100;
 }
 
 .area-list .card .area-location .area-location-info ul li {
   margin-top: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .area-list .card .area-location .area-location-info ul li:first-child img {
-  margin: 0 4px;
+  height: 100%;
+  margin: 0 5px;
 }
 
 .area-list .card .area-location .area-location-info ul li:nth-child(2) img {
@@ -236,7 +260,7 @@ body {
   margin: 0 8px;
 }
 
-.area-list .card .area-location .area-location-free {
+.area-list .card .area-location .area-location-forFree {
   position: absolute;
   bottom: 15px;
   right: 23px;
@@ -244,8 +268,10 @@ body {
   font-size: 16px;
 }
 
-.area-list .card .area-location .area-location-free img {
-  margin: 0 2px;
+.area-list .card .area-location .area-location-forFree img {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 3px;
 }
 
 @media screen and (max-width: 699px) {
