--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@ body{
     background-color: #EEEEEE;
     text-align:center;
     font-family: 'Noto Sans TC', sans-serif;
+    
 }
 .parallax-slider{
     left: 0;
@@ -14,13 +15,40 @@ body{
 .select{
     position: relative;
     height: 400px;
-    .select-title{
+    .select-title a{
+        display: block;
         position: relative;
+        text-decoration: none;
         top: 89px;
+        width: 280px;
+        height: 50px;
+        margin: 0 auto;
         font-size: 40px;
         font-weight: 700;
         color: #FFFFFF;
         letter-spacing: 5px;
+        text-shadow: 0 0 5px #000;
+        z-index: 2;
+    }
+    .select-title a:before,
+    .select-title a:after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        top: -2px;
+        z-index: -1;
+        border-radius: 50%;
+    }
+    .select-title a:before{
+        background-color: #ff5252;
+        left: 0;
+       
+    }
+    .select-title a:after{
+        background-color: #ffb142;
+        left: 45px;
     }
     .select-ad{
         position: relative;
@@ -35,7 +63,16 @@ body{
         height: 48px;
       }
 }
-
+.select:after{
+    content:'';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgba(0,0,0,0.1);
+    z-index: -1;
+}
 .hot-ad{
     position: relative;
     display: inline-block;
@@ -56,6 +93,30 @@ body{
     }
     .hot-ad-ads{
         position: relative;
+        & :nth-child(1).hot-btn{
+            background: rgb(138, 130, 204);
+            &:hover{
+                background-color: rgba(138, 130, 204,0.7);
+            }
+        }
+        & :nth-child(2).hot-btn{
+            background: rgb(255, 167, 130);
+            &:hover{
+                background-color:rgba(255, 167, 130,0.7);
+            }
+        }
+        & :nth-child(3).hot-btn{
+            background: rgb(245, 209, 5);
+            &:hover{
+                background-color: rgba(245, 209, 5,0.7);
+            }
+        }
+        & :nth-child(4).hot-btn{
+            background: rgb(50, 95, 126);
+            &:hover{
+                background-color:rgba(43, 81, 107,0.7);
+            }
+        }
         .hot-btn{
             position: relative;
             height: 42px;
@@ -67,9 +128,10 @@ body{
             border-radius: 5px;
             font-size: 20px;
             color: #FFFFFF;
+            outline: none;
           }
+        
     }
-    
 }
  
 //clear
@@ -115,6 +177,7 @@ body{
     align-items:center;
     flex-wrap: wrap;
     .card{
+        display: none;
         width: 50%;
         justify-content: center;
         align-items:center;
